--- a/css/main.css
+++ b/css/main.css
@@ -282,58 +282,54 @@ textarea {
 }
 
 
-.container {
-    max-width: 600px;
-    margin: 40px auto;
-}
-
 input {
-    display: inline-block;
-    width: 80%;
-    padding: 8px 4px;
+ padding: 10px 0;
+ display: inline-block;
+ font-size: 34px;
+ border: none;
+ border-bottom: solid 1px #999;
+ width: 110px;
+ color: #000;
+    font-weight: 500;
 }
 
-#output,
-#input,
-#resolution {
- padding: 10px 0;   
-}
-
-#output {
-    border-bottom: solid 1px #ccc;
-}
-
-#input,
-#resolution {
-    display: inline-block;
-    width: 40%;
-}
-
-label {
-    font-size: 11px;
-    display: block;
-    color: #999;
+form {
+    color: #666;
+    font-weight: 200;
+    font-size: 24px;
 }
 
 button {
     display: inline-block;
-    font-size: 12px;
+/*    font-size: 34px;*/
     background-color: #fff;
-    border: solid 1px #ccc;
-    text-transform: uppercase;
+    border: none;
+    color: #2481A6;
     padding: 10px 20px;
-    margin: 20px 0;
+    margin-top: 5px;
+    font-weight: 500;
 }
+button:hover {
+    color: #124559;
+}
+
+
+input:focus, button:focus {
+    outline: none;
+}
+
+.container {
+    max-width: 800px;
+    width: 100%;
+    margin: 40px auto;
+}
+
 
 #result {
-    background-color: #f2f2f3;
-    border: solid 1px #ccc;
-    border-radius: 10px;
-    padding: 10px 20px;
-    margin: 20px 0;
-    font-size: 11px;
-}
 
-#result span {
-        font-size: 18px;
+
+    margin: 20px 0;
+
+
+        font-size: 60px;
     }
