--- a/css/main.css
+++ b/css/main.css
@@ -287,10 +287,9 @@ input {
  display: inline-block;
  font-size: 34px;
  border: none;
-/* border-bottom: solid 1px #999;*/
  width: 110px;
  color: #000;
-    font-weight: 500;
+ font-weight: 500;
 }
 
 #input,
@@ -306,12 +305,8 @@ form {
 
 button {
     display: inline;
-/*    font-size: 34px;*/
     background-color: #fff;
     border: none;
-/*    color: #2481A6;*/
-/*    padding: 10px 20px;*/
-/*    margin-top: 5px;*/
     font-weight: 500;
     text-decoration: underline;
 }
@@ -334,15 +329,15 @@ input:focus, button:focus {
     color: #000;
     margin-top: 20px;
     font-size: 34px;
+    opacity: 0;
+    transition: opacity .3s ease-in;
+    -webkit-transition: opacity .3s ease-in;
+    -mozilla-transition: opacity .3s ease-in;
+    -opera-transition: opacity .3s ease-in;
 }
 
 #result {
-font-weight: 600;
+    font-weight: 600;
     font-size: 44px;
     color: #000;
-/*
-
-    margin: 20px 0;
-font-size: 60px;
-*/
-    }
+}
